2.0 Alpha 3:
	- new option to import text without adding annotations.
2.0 Alpha 2: (2004/02/23)
	- changed dictionary format detection to work with more EDICT
	  and WadokuJT versions.
	- support for UTF-8 encoded EDICT files.
	- explanation dialog for unrecognized dictionary formats.
2.0 Alpha 1: (2003/02/23)
	- fixed JGloss startup with uninitialized prefs.
	- Fixed HTML export.
	- Added LaTeX export.
2.0 Alpha 0: (2003/02/16)
	- Extended dictionary functionality.
	- Document window now includes word lookup panel.
	- Annotated words are looked up when selected, not only
	  during document import.
	- Redesign and rewrite of many internals.
	- Java2 1.3 is no longer supported, minimum version is 1.4.
	- Some features from JGloss 1.0.x are missing in this release.
1.0.8: (2004/03/07)
	- fixed bug in dictionary loading which made the preferences
	  window unuseable
1.0.7: (2004/02/23)
	- changed dictionary format detection to work with more EDICT
	  and WadokuJT versions.
	- support for UTF-8 encoded EDICT files (only with Java2 1.4).
	- explanation dialog for unrecognized dictionary formats.
	- removed annotatehml startup option.
1.0.6: (2002/08/02)
	- Improved keyboard navigation.
	- Added best match search option to word lookup.
	- Added automatic lookup of clipboard content to word lookup.
	- Added keyboard shortcut for Import Clipboard.
	- Changed combo box in word lookup dialog to text field to
	  work around a bug in the JRE 1.4 Windows Look & Feel. This
	  fixes the need to push the "Search" button twice.
	- Changed GDICT name to WadokuJT.
	- Fixed WadokuJT implementation regex which would hang JGloss
	  for a few entries.
	- Fixed access of A drive dialogs when using file dialogs with
	  Windows and JRE 1.3.
1.0.5: (2002/06/11)
	- Improved paragraph detection on text import.
	- Added XML export option.
	- Fixed memory leak. Now all memory used by a document is released
	  after the document window is closed.